--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="title">डाउनलोड करने के लिए नीचे क्लिक करें</div>
         <!-- MediaFire से डायरेक्ट डाउनलोड लिंक -->
-        <a href="https://www.mediafire.com/file/w3zj5yb3aynvabg/app-release.apk/file" class="download-button" download>डाउनलोड करें</a>
+        <a href="https://download1349.mediafire.com/vyytbw164f3g4PMIeUmpx6FQLyrmg5ejhbOwyonvJXDDCSH1PdniWJHOR4kS98HjKathSrbYoNrmCy9m2WLe9B_6jRJ8GlLOj_D7Dtg1u2MdVDkRNPBZp-_FtqhJVuAxLFA_CHsq_zpk9tuUiX_EzTg9dmZwnFNOfyQlqsSFnjJi/w3zj5yb3aynvabg/Onlineplay.apk" class="download-button" download>डाउनलोड करें</a>
     </div>
 
     <!-- टेलीग्राम आइकॉन्स -->
